# physical-ai-textbook.

./: settings.json
backend/: README.md  init_qdrant.py  list_methods.py  pyproject.toml  test_qdrant.py
backend/src/api/: chat.py  main.py
backend/src/core/: rag_pipeline.py
backend/src/models/: chat_models.py
backend/src/services/: gemini_service.py  neon_db.py  qdrant_client.py
backend/tests/contract/: test_chat_api.py
backend/tests/integration/: test_contextual_rag.py  test_rag_pipeline.py
history/prompts/001-setup-docusaurus-book/: 002-specify-docusaurus-book-setup.spec.prompt.md  003-plan-docusaurus-book-setup.plan.prompt.md  003-plan-docusaurus-project-setup.plan.prompt.md  004-generate-tasks-for-docusaurus-setup.tasks.prompt.md  005-analyze-docusaurus-setup-artifacts.misc.prompt.md  006-implement-docusaurus-book-setup.implement.prompt.md  007-successfully-implement-docusaurus-book-setup.green.prompt.md  008-verify-docusaurus-book-setup-rerun.green.prompt.md  009-implement-docusaurus-book-setup.implement.prompt.md
memory/: constitution.md
scripts/content_ingestion/: ingest_docusaurus_content.py  pyproject.toml
specs/001-setup-docusaurus-book/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-setup-docusaurus-book/checklists/: requirements.md
specs/002-author-book-content/: plan.md  spec.md  tasks.md
specs/003-redesign-homepage/: plan.md  spec.md  tasks.md
specs/004-homepage-features/: plan.md  spec.md  tasks.md
specs/005-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-add-urdu-translation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+37 files in other folders)
