[project]
name = "content-ingestion"
version = "0.1.0"
description = ""
authors = [
    {name = "DevAbdullah90",email = "abdullahkashif12b3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "markdown-it-py (>=4.0.0,<5.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "openai (>=2.8.1,<3.0.0)",
    "qdrant-client (>=1.16.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
